--- a/module/Application/view/application/ticket/add.phtml
+++ b/module/Application/view/application/ticket/add.phtml
@@ -21,36 +21,7 @@
                 </div>
             </div>
 
-            <form action="" method="POST" enctype="multipart/form-data">
-                <div class="box-body">
-                    <div class="form-group">
-                        <label for="nome">Nome</label>
-                        <input class="form-control" type="text" name="name" maxlength="85">
-                    </div>
-
-                    <div class="form-group">
-                        <label for="description">Descrição</label>
-                        <textarea name="description" class="form-control" cols="30" rows="10"></textarea>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="priority">Prioridade</label>
-                        <select name="priority" class="form-control">
-                            <option value="0">Baixo</option>
-                            <option value="1">Médio</option>
-                            <option value="2">Alto</option>
-                        </select>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="attachment">Arquivos</label>
-                        <input type="file" name="attachment" class="form-control" multiple="multiple">
-                    </div>
-                    <div class="box-footer">
-                        <button type="submit" class="btn btn-primary"><i class="fa fa-floppy-o"></i> Salvar Ticket</button>
-                    </div>
-                </div>
-            </form>
+            <?=  $this->partial('application/ticket/form') ?>
 
             <!-- /.box-body -->
         </div>
