--- a/module/Application/view/application/ticket/edit.phtml
+++ b/module/Application/view/application/ticket/edit.phtml
@@ -1,7 +1,7 @@
 <div class="content-wrapper">
 <!-- Content Header (Page header) -->
 <section class="content-header">
-    <h1>Delete</h1>
+    <h1>Ticket</h1>
 </section>
 
 <!-- Main content -->
@@ -10,7 +10,7 @@
     <!-- Default box -->
     <div class="box">
         <div class="box-header with-border">
-            <h3 class="box-title">Deletar Ticket</h3>
+            <h3 class="box-title">Editar Ticket</h3>
 
             <div class="box-tools pull-right">
                 <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip"
@@ -21,19 +21,8 @@
             </div>
         </div>
 
-        <h2><?= $this->escapeHtml($this->ticket->name); ?></h2>
+        <?= $this->partial('application/ticket/form'); ?>
 
-        <h2 class="text-danger">Atenção</h2>
-        <p>Ao deletar este ticket <strong>todos os arquivos e interações relacionados</strong> serão perdidos.</p>
-        <p >Tem serteza que deseja deletar este ticket? </p>
-
-
-        <?php echo $this->form()->openTag($this->form);?>
-            <?php echo $this->formHidden($this->form->get('csrf'));?>
-            <div class="box-footer">
-                <button type="submit" class="btn btn-danger"><i class="fa fa-trash-o"></i> Deletar Ticket</button>
-            </div>
-        <?php echo $this->form()->closeTag();?>
         <!-- /.box-body -->
 
     </div>
